TypeChecking/test_cases/bad/inherit-int.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits Int {
  x : Int <- 5 ;
} ;
